1999-06-24  SL Baur  <steve@xemacs.org>

	* package-compile.el: add lookup.

1999-05-13  SL Baur  <steve@gneiss.etl.go.jp>

	* XEmacs.rules: expand number of DATA destinations

1999-02-02  Jan Vroonhof  <vroonhof@math.ethz.ch>

	* XEmacs.rules (binkit-common): Create lisp dir with
	auto-autoloads, _pkg.el etc even if there are no other elcs.

1999-02-15  SL Baur  <steve@xemacs.org>

	* Makefile (bindist): Force autoloads building first.

	* XEmacs.rules (LANG): Ensure vanilla locale for building.

1998-12-08  SL Baur  <steve@altair.xemacs.org>

	* package-compile.el (package-directory-map): Update to match
	current set of packages.

	* libs/Makefile (autoloads): Fix typo.
	(bytecompile): Ditto.

1998-12-06  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules (bytecompile): Add bytecompile target.  Eliminate
	paths on default `XEMACS' and `TAR' binaries.

	* Makefile: Remove special treatment of packages needed for early
	bytecompilation.  Add `autoloads', and `bytecompile' targets.
	Add .PHONY.
	* os/Makefile (PACKAGES): Ditto.
	* oa/Makefile (PACKAGES): Ditto.
	* wp/Makefile (PACKAGES): Ditto.
	* games/Makefile (PACKAGES): Ditto.
	* prog/Makefile (PACKAGES): Ditto.
	* comm/Makefile (PACKAGES): Ditto.
	* libs/Makefile (PACKAGES): Ditto.
	* mule/Makefile (PACKAGES): Ditto.

1998-10-15  Greg Klanderman  <greg@alphatech.com>

	* hack-package-index.el (batch-hack-package-index): update for new 
	package index file format.

1998-10-13  SL Baur  <steve@altair.xemacs.org>

	* package-compile.el: Drop pgnus and irchat entries.

1998-10-12  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules: Fix all references to _pkg.el to refer to it via
	$(AUTOLOAD_PATH).

	* hack-package-index.el: New file.  Dynamically update
	package-get-base.el as tarballs are created.

	* XEmacs.rules: Add install: target.  Add autoloads: target.
	Add support for multiple lisp directories, multiple data directories.

1998-10-11  SL Baur  <steve@altair.xemacs.org>
